--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav>
         <ul id="menu">
           <li>
-            <a href="shopping/shopping.html" target="_blank" class="links"
+            <a href="./shopping/shopping.html" target="_blank" class="links"
               >Shopping</a
             >
           </li>
