--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
       <nav>
         <ul id="menu">
           <li>
-            <a href="./shopping/shopping.html" target="_blank" class="links"
-              >Shopping</a
-            >
+            <a href="./shopping/shopping.html" class="links">Shopping</a>
           </li>
           <li>
             <a href="contato/contato.html" class="links">Contato</a>
           </li>
           <li><a href="server/server.html" class="links">Server</a></li>
           <li>
-            <a href="forum/forum.html" target="_blank" class="links">Forum</a>
+            <a href="forum/forum.html" class="links">Forum</a>
           </li>
         </ul>
       </nav>
