--- a/server.html
+++ b/server.html
@@ -15,19 +15,19 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="server-style.css" />
-    <link rel="shortcut icon" href="../assets/logo.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="styles/server-style.css" />
+    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
 
     <title>Abyss</title>
   </head>
   <body class="background">
     <header class="header">
-      <img src="../assets/logo.svg" alt="logo" class="top-img-logo" />
-      <img src="../assets/name.svg" alt="name" class="name" />
+      <img src="./assets/logo.svg" alt="logo" class="top-img-logo" />
+      <img src="./assets/name.svg" alt="name" class="name" />
     </header>
     <main>
       <div class="content">
-        <img src="../assets/logo.svg" alt="logo" class="logo-img" />
+        <img src="./assets/logo.svg" alt="logo" class="logo-img" />
         <p>Server list</p>
         <div class="servers">
           <ul class="server-list">
@@ -48,7 +48,7 @@
         <button type="button" class="login-btn">Entrar</button>
       </div>
       <button type="button" class="back-btn">
-        <a href="../index.html">Voltar</a>
+        <a href="./index.html">Voltar</a>
       </button>
     </main>
   </body>
