--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li>
             <a href="contato/contato.html" class="links">Contato</a>
           </li>
-          <li><a href="server/server.html" class="links">Server</a></li>
+          <li><a href="server.html" class="links">Server</a></li>
           <li>
             <a href="forum/forum.html" class="links">Forum</a>
           </li>
